--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digicloset-v1.2-(static)",
+  "name": "digicloset-v2.0-(persistent)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,12 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
     "@google/genai": "^1.35.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
